Load taxonomy colors from new SEA-AD file

--- a/res/met_loader_resources.qrc
+++ b/res/met_loader_resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="met_loader">
         <file>hodge_taxonomy.csv</file>
+        <file>SEAAD_colors.csv</file>
     </qresource>
 </RCC>
